--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,15 @@
-APP_HOST='0.0.0.0'
-APP_PORT='5001'
+# Global Configuration
+RESTART_POLICY=unless-stopped
+TIMEZONE=Asia/Bangkok
+HEALTHCHECK_INTERVAL=30s
+HEALTHCHECK_TIMEOUT=10s
+HEALTHCHECK_RETRIES=3
+
+# Dockge Configuration
+DOCKGE_CONTAINER_NAME=dockge_app
+DOCKGE_IMAGE_NAME=louislam/dockge
+DOCKGE_IMAGE_VERSION=latest
+DOCKGE_HTTP_PORT=5001
+DOCKGE_STACKS_DIR=/opt/stacks
+DOCKGE_DATA_DIR=./data
+DOCKER_SOCK_PATH=/var/run/docker.sock
